# Factorybrain

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  factorybrain.code-workspace
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_production_logs.py
backend/core/: celery_app.py  config.py  database.py  main.py
backend/core/ai/: embeddings.py  prompts.py  router.py  service.py
backend/core/api/: audit.py  dashboard.py  diagnostics.py  failure_codes.py  kpis.py  loto.py  production.py  requests.py  routes.py  scheduling.py  shift.py  uploads.py  webhooks.py
backend/core/auth/: models.py  permissions.py  routes.py
backend/core/devices/: routes.py
backend/core/ingestion/: mqtt_consumer.py
backend/core/machines/: routes.py
backend/core/maintenance/: pm_routes.py  routes.py
backend/core/models/: __init__.py  ai_suggestion.py  audit_log.py  base.py  failure_code.py  knowledge_chunk.py  loto.py  machine.py  machine_event.py  maintenance.py  ml_model.py  plant.py  production_log.py  push_subscription.py  sensor_node.py  sensor_reading.py  shift_handover.py  technician.py  tenant.py  time_entry.py  user.py  webhook.py  work_order_event.py  work_request.py
backend/core/plants/: routes.py
backend/core/schemas/: audit_log.py  failure_code.py  machine.py  maintenance.py  plant.py  production.py  sensor_node.py  telemetry.py  tenant.py  time_entry.py  user.py  work_order_event.py  work_request.py
backend/core/services/: audit_service.py  dashboard_service.py  device_service.py  diagnostics_service.py  event_service.py  failure_code_service.py  kpi_service.py  loto_service.py  machine_service.py  maintenance_service.py  plant_service.py  pm_schedule_service.py  pm_templates.py  production_service.py  request_service.py  scheduling_service.py  shift_service.py  time_service.py  user_service.py  webhook_service.py
backend/core/tasks/: anomaly_checker.py  node_health.py  report_generator.py
backend/core/tenants/: routes.py
backend/core/users/: routes.py
backend/scripts/: db_simulator.py  sensor_simulator.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_schemas.py
docs/: cmms-market-research-2026.md  competitive-research.md  hardware-shopping-list.md  phase1-implementation-plan.md  phase3-implementation-plan.md  ui-redesign-plan.md
firmware/: CMakeLists.txt
firmware/main/: CMakeLists.txt  main.c
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  (+1 more)
(+92 files in other folders)
