[project]
name = "factorybrain"
version = "0.1.0"
description = "Intelligent Manufacturing Platform — Predictive Maintenance + MES"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    # Auth
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    # MQTT
    "aiomqtt>=2.3",
    # Redis
    "redis[hiredis]>=5.2",
    # Task queue
    "celery[redis]>=5.4",
    # Sync DB driver (for Celery tasks)
    "psycopg2-binary>=2.9",
    # Object storage
    "minio>=7.2",
    # HTTP client
    "httpx>=0.28",
    # Utilities
    "orjson>=3.10",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
]
ml = [
    "torch>=2.5",
    "onnxruntime>=1.20",
    "scipy>=1.14",
    "scikit-learn>=1.6",
    "pandas>=2.2",
    "numpy>=2.1",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
